--- a/app/src/main/res/layout/fragment_new_form.xml
+++ b/app/src/main/res/layout/fragment_new_form.xml
@@ -70,42 +70,43 @@
                     android:layout_alignParentEnd="true" />
 
                 <TextView
+                    android:gravity="right"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text=""
+                    android:layout_height="35dp"
+                    android:textAppearance="?android:attr/textAppearanceButton"
+                    android:text="TODAY "
                     android:id="@+id/dateText"
-                    android:layout_below="@+id/toAutoComplete"
-                    android:layout_marginTop="35dp"
-                    android:layout_alignLeft="@+id/to"
-                    android:layout_alignStart="@+id/to" />
+                    android:layout_alignBottom="@+id/journeydate"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
                 <Button
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:text="Date"
+                    android:text=""
                     android:id="@+id/journeydate"
-                    android:alpha="1"
-                    android:layout_alignTop="@+id/dateText"
-                    android:layout_alignLeft="@+id/to"
-                    android:layout_alignStart="@+id/to" />
+                    android:alpha="0"
+                    android:layout_alignTop="@+id/spinner"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
                 <Spinner
                     android:layout_width="170dp"
                     android:layout_height="45dp"
                     android:id="@+id/spinner"
-                    android:layout_alignTop="@+id/journeydate"
                     android:spinnerMode="dropdown"
+                    android:layout_below="@+id/toAutoComplete"
                     android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="12dp" />
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="phone"
                     android:ems="10"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="15dp"
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -123,10 +124,9 @@
             android:id="@+id/lvExp"
             android:layout_height="220dp"
             android:layout_width="wrap_content"
-            android:layout_marginTop="31dp"
-            android:layout_below="@+id/scrollView"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/scrollView" />
 
 
 
