Fragments 1.2.1 Final Build Today for fragments

--- a/app/src/main/res/layout/activity_floating_form.xml
+++ b/app/src/main/res/layout/activity_floating_form.xml
@@ -130,7 +130,7 @@
             android:text="Save"
             android:onClick="Submit"
             android:id="@+id/button2"
-            android:background="#b39ddb"
+            android:background="@color/colorAccent"
             android:layout_below="@+id/aadharno"
             android:layout_alignRight="@+id/aadharno"
             android:layout_alignEnd="@+id/aadharno"
