--- a/app/src/main/res/layout/app_bar_instant_book.xml
+++ b/app/src/main/res/layout/app_bar_instant_book.xml
@@ -29,6 +29,7 @@
         </RelativeLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
+        app:backgroundTint="@color/colorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
