--- a/app/src/main/res/menu/activity_instant_book_drawer.xml
+++ b/app/src/main/res/menu/activity_instant_book_drawer.xml
@@ -4,19 +4,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+
+            android:title="New Form " />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+
+            android:title="Existig Form " />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+
+            android:title="Frequently Used" />
         <item
             android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
+
             android:title="Tools" />
     </group>
 
