--- a/app/src/main/res/layout/app_bar_instant_book.xml
+++ b/app/src/main/res/layout/app_bar_instant_book.xml
@@ -10,6 +10,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
@@ -25,6 +26,9 @@
         </android.support.design.widget.AppBarLayout>
 
         <include layout="@layout/content_instant_book"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/appbar"
              />
         </RelativeLayout>
     <android.support.design.widget.FloatingActionButton
