--- a/app/src/main/res/layout/content_instant_book.xml
+++ b/app/src/main/res/layout/content_instant_book.xml
@@ -16,9 +16,8 @@
         android:id="@+id/flContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="50dp" />
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
