--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -7,12 +7,29 @@
     android:background="#2196f3">
 
 
+    <ImageButton
+        android:layout_width="20dip"
+        android:layout_height="wrap_content"
+        android:id="@+id/editlist"
+        android:focusable="false"
+        android:background="#2196f3"
+        android:src="@mipmap/ic_action_overflow"
+        android:layout_gravity="right"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
     <TextView
         android:id="@+id/lblListHeader"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textSize="19dp"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:text="Anurag Manohar Wagh"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/editlist"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-</LinearLayout>
+</RelativeLayout>
