Fragment Expandable list

--- a/app/src/main/res/layout/fragment_new_form.xml
+++ b/app/src/main/res/layout/fragment_new_form.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/frameForm"
     tools:context="com.example.anurag.instabook.NewForm">
 
@@ -20,6 +21,7 @@
 
         <ScrollView
             android:id="@+id/scrollView"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <RelativeLayout
@@ -116,21 +118,21 @@
                     android:layout_below="@+id/spinner"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true" />
-
+                <View
+                    android:layout_below="@id/editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@android:color/darker_gray" />
             </RelativeLayout>
         </ScrollView>
 
-        <ExpandableListView
-            android:id="@+id/lvExp"
-            android:layout_height="220dp"
-            android:layout_width="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/scrollView" />
-
-
-
-
+        <FrameLayout
+            android:id="@+id/flContent2"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@+id/scrollView"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
 
