--- a/app/src/main/res/layout/fragment_new_form.xml
+++ b/app/src/main/res/layout/fragment_new_form.xml
@@ -1,4 +1,10 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    android:id="@+id/scrollView"
+
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <FrameLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,23 +25,21 @@
         tools:context="com.example.anurag.instabook.DisplayData2"
         tools:showIn="@layout/activity_display_data2">
 
-        <ScrollView
-            android:id="@+id/scrollView"
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
             <RelativeLayout
                 android:id="@+id/relative"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="800dp"
 
                 android:layout_alignParentTop="true">
+
 
                 <AutoCompleteTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/fromAutoComplete"
                     android:layout_alignParentTop="true"
+
                     android:layout_toRightOf="@+id/from"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true" />
@@ -45,6 +49,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="From:    "
+
                     android:id="@+id/from"
                     android:layout_alignBottom="@+id/fromAutoComplete"
                     android:layout_alignParentLeft="true"
@@ -106,35 +111,90 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="phone"
-                    android:ems="10"
+                    android:inputType="number"
+                    android:ems="5"
+                    android:maxLength="5"
                     android:layout_marginTop="15dp"
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingRight="@dimen/activity_horizontal_margin"
                     android:paddingTop="@dimen/activity_vertical_margin"
-                    android:hint="Mobile Number"
-                    android:id="@+id/editText"
+                    android:hint="Train Number"
+                    android:id="@+id/trainno"
                     android:layout_below="@+id/spinner"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true" />
-                <View
-                    android:layout_below="@id/editText"
+                <!--<View
+                    android:layout_below="@id/trainno"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@android:color/darker_gray" />
-            </RelativeLayout>
-        </ScrollView>
+                    android:background="@android:color/darker_gray"
+                    android:id="@+id/view" />
+-->
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="65dp"
+                    android:id="@+id/class_t"
+                    android:entries="@array/class_t"
+                    android:layout_below="@+id/quota"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
-        <FrameLayout
-            android:id="@+id/flContent2"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_below="@+id/scrollView"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="65dp"
+                    android:id="@+id/quota"
+                    android:layout_below="@+id/trainno"
+                    android:entries="@array/quota"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
+                <EditText
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_below="@+id/class_t"
+                    android:inputType="phone"
+                    android:ems="10"
+                    android:maxLength="10"
+                    android:id="@+id/phone"
+                    android:hint="Mobile No. 10 digit"
+                    />
+                <EditText
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_below="@+id/phone"
+                    android:id="@+id/formname"
+                    android:hint="Form Name"
+                    />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/formname"
+                    android:text="New Button"
+                    android:onClick="save"
+                    android:id="@+id/button5"
+                    android:layout_gravity="right|bottom" />
+
+                <FrameLayout
+                    android:id="@+id/flContent2"
+                    android:layout_width="match_parent"
+
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="right|top"
+                    android:layout_below="@+id/button5"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
+
+
+
+
+            </RelativeLayout>
+
+
 
     </RelativeLayout>
 
 
-</FrameLayout>
+    </FrameLayout>
+
+
+</ScrollView>
