--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -6,11 +6,11 @@
         app:showAsAction="ifRoom"
         android:title="Edit"
 
-        android:icon="@android:drawable/ic_menu_delete"/>
+        android:icon="@android:drawable/ic_menu_save"/>
     <item
         android:id="@+id/menu_delete"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
         android:title="Delete"
-        android:icon="@android:drawable/ic_menu_delete"/>
+        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
 </menu>
