--- a/app/src/main/res/layout/fragment_new_form.xml
+++ b/app/src/main/res/layout/fragment_new_form.xml
@@ -169,7 +169,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/formname"
-                    android:text="New Button"
+                    android:text="SAVE FORM"
 
                     android:id="@+id/button5"
                     android:layout_gravity="right|bottom" />
