--- a/app/src/main/res/layout/fragment_expandable_list_view.xml
+++ b/app/src/main/res/layout/fragment_expandable_list_view.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:transcriptMode="alwaysScroll"
         />
 
 </FrameLayout>
