--- a/app/src/main/res/layout/app_bar_instant_book.xml
+++ b/app/src/main/res/layout/app_bar_instant_book.xml
@@ -31,7 +31,7 @@
             android:layout_below="@id/appbar"
              />
         </RelativeLayout>
-    <android.support.design.widget.FloatingActionButton
+   <!-- <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         app:backgroundTint="@color/colorPrimary"
         android:layout_width="wrap_content"
@@ -39,5 +39,5 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_input_add" />
-
+-->
 </android.support.design.widget.CoordinatorLayout>
